# object_centroid_detector

./: CMakeLists.txt  README.md  package.xml
include/object_centroid_detector/: centroid_detector.h~
src/: object_centroid_detector.cpp
